Migrate to java 15